Fix for #37 on desktop, need to modify login styles on mobile

--- a/client/src/app/profile/profile.component.scss
+++ b/client/src/app/profile/profile.component.scss
@@ -11,7 +11,7 @@
 
     display: block;
     letter-spacing: 2px;
-    
+
 }
 
 #pic {
@@ -33,13 +33,21 @@
 
     justify-content: center;
     align-items: center;
-    
-    top: 10%;
+
+    top: 0;
+    @include not-phones {
+        top: 200px;
+    }
     left: 0;
     width: 100%;
     height: 100%;
 
     #modal {
+
+        @include not-phones {
+            position: relative;
+            top: -20%;
+        }
 
         hr {
             border: solid 1px $pale-salmon;
@@ -48,7 +56,7 @@
         #signin {
             line-height: 1.5;
 
-            #forgot { 
+            #forgot {
                 text-align: right;
             }
         }
@@ -59,7 +67,7 @@
 
             justify-content: center;
             align-items: center;
-            
+
             width: 75px;
             height: 75px;
             border: solid 1px #000000;
@@ -79,6 +87,6 @@
             margin-top: 7%;
             margin-bottom: 12%;
         }
-    
+
     }
 }
